--- a/verificarEdad.html
+++ b/verificarEdad.html
@@ -9,8 +9,9 @@
 <body>
     <h1>Verifica tu Edad</h1>
     <label for="edad">Ingresa tu edad</label>
-    <input type="number" id="edad" placeholder = "Escribe tu edad aquí">
-    <button onclick="verificarEdad()">Enviar</button>
+    <input type="number" id="edad" placeholder = "Escribe tu edad aquí"> <br> <br>
+    <button onclick="verificarEdad()">Enviar con función</button> 
+    <button id="botonEdad">Enviar con Id</button>
     <p id="resultado"></p>
 <script src="scriptEdad.js"></script>
 
